	sqlrelay.conf example is installed under example directory now
	Python DB -> Python DB-API in the docs
	moved private members and support classes into C++ API's .cpp files
	removed -revision during link and adopted Semantic Versioning 2.0
	added missing get*List methods to Java API
	removed errant information_schema views from getTableList with mysql
	fixed several subtle listenertimeout-related bugs
	fixed inode-check in logger modules - works correctly with logrotate
	change "an error occurred" to "server closed connection" to reduce
		false-positives from log analyzers - "real" errors will still
		be reported elsewhere
	refactored the config file parser
	added support for kerberos authentication and encryption
	added krb_userlist auth module
	renamed "authentication" to "auth" (for authentication/authorization,
		also matches module name prefix) in config file and docs
	removed an errant flushWriteBuffer after client auth
	moved debugprint stuff into rudiments
	added support for tls authentication and encryption
	added tls_userlist auth module
	fixed long-standing copyrefs bug
	when calling after-triggers, "success" flag is set correctly now
	fixed bug where after-triggers could mask failed queries
	added support for "before and after" triggers

0.64 - fixed bug in sqlrsh that caused it to filter out non-ascii characters
	added informix connection module
	added shutdown loop detection in sqlr-listener
	fixed dbhostname/dbipaddress requests
	added bind variable format validation to php pdo driver
	added softttl parameter
	added db/language detection to configure.vbs
	added passwordfunction parameter to "sqlrelay" authentication module
	added -disable-crash-handler command line option to server processes
	postgresql connection module PQclear()'s the result of PQprepare() now,
		fixing a memory leak
	updated postgresql connection module to handle invalid bind variables
		properly, and without crash